--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 55px;
+    justify-content: space-between;
 }
 
 .left-section {
@@ -12,6 +13,9 @@
 .middle-section {
     background-color: lightpink;
     flex: 1;
+    margin-left: 70px;
+    margin-right: 35px;
+    max-width: 500px;
 }
 
 .right-section {
