--- a/styles/header.css
+++ b/styles/header.css
@@ -6,14 +6,14 @@
 }
 
 .left-section {
-    background-color: lightblue;
-    width: 150px;
     display: flex;
     align-items: center;
 }
 
 .hamburger-menu {
-    height: 20px;
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 20px;
 }
 
 .youtube-logo {
@@ -21,11 +21,26 @@
 }
 
 .middle-section {
-    background-color: lightpink;
     flex: 1;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.search-bar {
+    flex: 1;
+}
+
+.search-button {
+    height: 40px;
+    width: 60px;
+}
+
+.voice-search-button {
+    height: 40px;
+    width: 40px;
 }
 
 .right-section {
