--- a/styles/header.css
+++ b/styles/header.css
@@ -21,16 +21,21 @@
 }
 
 .middle-section {
-    flex: 1;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
     display: flex;
     align-items: center;
+    flex: 1;
 }
 
 .search-bar {
     flex: 1;
+    height: 34px;
+}
+
+.search-bar::placeholder {
+    font-family: Roboto, Arail;
 }
 
 .search-button {
