--- a/styles/header.css
+++ b/styles/header.css
@@ -31,11 +31,19 @@
 
 .search-bar {
     flex: 1;
-    height: 34px;
+    height: 36px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192,192,192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
 }
 
 .search-bar::placeholder {
     font-family: Roboto, Arail;
+    font-size: 16px;
 }
 
 .search-button {
