--- a/styles/header.css
+++ b/styles/header.css
@@ -54,6 +54,7 @@
     border-style: solid;
     border-color: rgb(192,192,192);
     margin-left: -1px;
+    margin-right: 10px
 }
 
 .search-icon {
@@ -64,9 +65,35 @@
 .voice-search-button {
     height: 40px;
     width: 40px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(248, 248, 245);
+}
+
+.voice-search-icon {
+    height: 24px;
+    margin-top: 4px;
+    background-color: rgb(245, 245, 245);
 }
 
 .right-section {
-    background-color: lightblue;
     width: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.upload-icon {
+    height: 24px;
+}
+
+.youtube-apps-icon {
+    height: 24px;
+}
+
+.notifications-icon {
+    height: 24px;
+}
+
+.current-user-icon {
+    height: 32px;
 }
