--- a/styles/header.css
+++ b/styles/header.css
@@ -30,6 +30,7 @@
 }
 
 .search-bar {
+    width: 0;
     flex: 1;
     height: 36px;
     padding-left: 10px;
@@ -42,12 +43,12 @@
 }
 
 .search-bar::placeholder {
-    font-family: Roboto, Arail;
+    font-family: Roboto, Arial;
     font-size: 16px;
 }
 
 .search-button {
-    height: 40px;
+    height: 39px;
     width: 66px;
     background-color: rgb(240, 240, 240);
     border-width: 1px;
@@ -77,9 +78,12 @@
 }
 
 .right-section {
-    width: 200px;
+    width: 180px;
+    margin-right: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
 }
 
 .upload-icon {
@@ -96,4 +100,5 @@
 
 .current-user-icon {
     height: 32px;
+    border-radius: 16px;
 }
