--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,13 @@
     flex-direction: row;
     height: 55px;
     justify-content: space-between;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    background-color: white;
 }
 
 .left-section {
