--- a/styles/video.css
+++ b/styles/video.css
@@ -29,6 +29,7 @@
 
 .thumbnail-row {
     margin-bottom: 10px;
+    position: relative;
 }
 
 .vid-author {
@@ -40,4 +41,12 @@
 .vid-stats {
     font-size: 12px;
     color: rgb(96, 96, 96);
+}
+
+.vid-time {
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 8px;
+    right: 5px;
 }
