More design on vid-time, font-weight:500 semi-bold

--- a/styles/video.css
+++ b/styles/video.css
@@ -44,6 +44,9 @@
 }
 
 .vid-time {
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: 500;
     background-color: black;
     color: white;
     position: absolute;
