Fix all vid-time, Issue: thumbnail-pic goes above the header, but vid-info goes below

--- a/styles/video.css
+++ b/styles/video.css
@@ -48,6 +48,11 @@
     font-size: 12px;
     font-weight: 500;
     background-color: black;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 2px;
     color: white;
     position: absolute;
     bottom: 8px;
