--- a/styles/header.css
+++ b/styles/header.css
@@ -68,11 +68,13 @@
     border-color: rgb(192,192,192);
     margin-left: -1px;
     margin-right: 10px;
+}
 
+.search-button, .voice-search-button {
     position: relative;
 }
 
-.search-button .tooltip {
+.search-button .tooltip, .voice-search-button .tooltip {
     position: absolute;
     background-color: gray;
     color: white;
@@ -88,7 +90,7 @@
     pointer-events: none;
 }
 
-.search-button:hover .tooltip {
+.search-button:hover .tooltip, .voice-search-button:hover .tooltip {
     opacity: 1;
 }
 
