--- a/styles/header.css
+++ b/styles/header.css
@@ -72,6 +72,9 @@
 
 .search-button, .voice-search-button {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-button .tooltip, .voice-search-button .tooltip {
@@ -97,7 +100,6 @@
 
 .search-icon {
     height: 25px;
-    margin-top: 4px;
 }
 
 .voice-search-button {
@@ -110,7 +112,6 @@
 
 .voice-search-icon {
     height: 24px;
-    margin-top: 4px;
     background-color: rgb(245, 245, 245);
 }
 
