--- a/styles/header.css
+++ b/styles/header.css
@@ -70,14 +70,23 @@
     margin-right: 10px;
 }
 
-.search-button, .voice-search-button {
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.search-button .tooltip, .voice-search-button .tooltip {
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+    font-family: Roboto, Arial;
     position: absolute;
     background-color: gray;
     color: white;
@@ -94,7 +103,11 @@
     white-space: nowrap;
 }
 
-.search-button:hover .tooltip, .voice-search-button:hover .tooltip {
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
     opacity: 1;
 }
 
