Responsive design: @media (max-width)

--- a/styles/video.css
+++ b/styles/video.css
@@ -5,6 +5,12 @@
     row-gap: 40px;
 }
 
+@media (max-width: 750px) {
+    .vid-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 .thumbnail {
     width: 100%;
     object-fit: contain;
