--- a/styles/video.css
+++ b/styles/video.css
@@ -118,10 +118,7 @@
     font-size: 12px;
     font-weight: 500;
     background-color: black;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px;
     border-radius: 2px;
     color: white;
     position: absolute;
