--- a/styles/video.css
+++ b/styles/video.css
@@ -118,7 +118,7 @@
     font-size: 12px;
     font-weight: 500;
     background-color: black;
-    padding: 4px;
+    padding: 4px 10px;
     border-radius: 2px;
     color: white;
     position: absolute;
