Inheritance: parent to child(inner elements) - text-decoration, works on paragraph, font, not border, margin...

--- a/styles/video.css
+++ b/styles/video.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+    text-decoration: underline;
 }
 
 @media (max-width: 750px) {
